[package]
name = "shuffler"
version = "0.1.0"
authors = ["Umayr Shahid <umayr.shahid@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "shuffler"
path = "src/main.rs"

[dependencies]
rand = "0.8.3"
getopts = "0.2"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.51"
console_error_panic_hook = "0.1.6"
